--- a/2_files/2.htm
+++ b/2_files/2.htm
@@ -35,21 +35,49 @@
                 top:-101px;
 
             }
+            .nav-tip,#header_side_menu,menu{z-index:-1}
         </style>
         <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
         <script type="text/javascript">
             $(function() {
-                $('.nav-link').hover(function() {
+                $('.nav-link').hover(function(e) {
+                    var e_cl = $(e.target).attr('class');
+//                    var flag = $(this).data('flag');
+//                    var _this = $(this);
+                    if (e_cl == 'nav-tip') {
+                        return false;
+                    }
+//                    $(this).data('flag', '1');
+
                     var title = $(this).attr('data-title');
                     if (title != undefined) {
                         $(this).next('.nav-tip').html(title);
-
                     }
-                    $(this).next('.nav-tip').show();
+                    $(this).next('.nav-tip').css({'left': '5px'});
+                    $(this).next('.nav-tip').animate({left: '50px', opacity: 'show'}, 'fast', function() {
+                        $(this).next('.nav-tip').css({'left': '50px'});
+                        $(this).next('.nav-tip').show();
+//                        _this.data('flag', '2');
+                    });
+//                    $(this).next('.nav-tip').fadeIn('slow');
 
+                }, function(e) {
+                    var e_cl = $(e.target).attr('class');
+//                    var flag = $(this).data('flag');
+//                    var _this = $(this);
+                    if (e_cl == 'nav-tip') {
+                        return false;
+                    }
+//                    $(this).data('flag', '1');
+//                    $(this).next('.nav-tip').hide();
+//                    $(this).next('.nav-tip').css({'left': '25px'});
 
-                }, function() {
-                    $(this).next('.nav-tip').hide();
+                    $(this).next('.nav-tip').animate({left: '45px', opacity: 'hide'}, 'fast', function() {
+                        $(this).next('.nav-tip').css({'left': '45px'});
+                        $(this).next('.nav-tip').hide();
+//                        _this.data('flag', '2');
+                    });
+//                    $(this).next('.nav-tip').fadeOut('slow');
                 });
             })
         </script>
@@ -94,7 +122,7 @@
                         <i>
                         </i>
                     </a>
-                    <div class="nav-tip menu more-links">
+                    <div class="nav-tip menu more-links" style="z-index:-1">
                         <div class="row-0">
                             <div class="group clearfix">
                                 <a href="http://huaban.com/favorite/home/">
@@ -217,7 +245,7 @@
                         <i>
                         </i>
                     </a>
-                    <div class="nav-tip menu info-links">
+                    <div class="nav-tip menu info-links" style="z-index:-1">
                         <a href="http://huaban.com/about/#goodies">
                             采集工具
                         </a>
