--- a/1/index.html
+++ b/1/index.html
@@ -37,10 +37,10 @@ var data = [{
     children: [{}]
 }];
 function newTreeview() {
-    for (i in data) {
-        var name = data[i].name;
-        var htmlstr = '';
-      
+    for (var i in data) {
+        //var name = data[i].name;
+        //var htmlstr = '';
+      alert(data[i].name);
     }
 }
 $(function() {
