--- a/1/index.html
+++ b/1/index.html
@@ -40,7 +40,7 @@ function newTreeview() {
     for (var i in data) {
         //var name = data[i].name;
         //var htmlstr = '';
-      alert(data[i].name);
+      alert(data[i].children[0].name);
     }
 }
 $(function() {
